# python-wikibase

./: .gitignore  .isort.cfg  LICENSE  Makefile  README.md  config-example.json  pyproject.toml
.hooks/: pre-commit
docs/: claims-qualifiers-references.md  data-types.md  items-properties.md  labels-aliases-descriptions.md  usage.md
python_wikibase/: __init__.py  base.py  python_wikibase.py  value.py  wikibase.py
python_wikibase/data_model/: __init__.py  alias.py  aliases.py  claim.py  data_type.py  description.py  entity.py  label.py  qualifier.py  reference.py
python_wikibase/data_types/: __init__.py  data_type.py  external_id.py  geo_location.py  quantity.py  string_value.py
python_wikibase/utils/: __init__.py  data_types.py  exceptions.py  property_types.py
tests/: conftest.py  constants.py  test_claim.py  test_entity.py  test_qualifier.py  test_references.py
