[tool.poetry]
name = "python-wikibase"
version = "0.1.0"
description = "Wikibase queries and edits made easy"
# TODO license
authors = ["Samuel Meuli <me@samuelmeuli.com>"]
repository = "https://github.com/samuelmeuli/python-wikibase"
# TODO documentation URL
keywords = ["wikibase", "wikidata", "bot", "api", "wrapper"]
classifiers = [
	"Intended Audience :: Developers",
	"Topic :: Internet",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
wikibase-api = {path = "../wikibase-api"}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
