[tool.poetry]
name = "python-wikibase"
version = "0.1.0"
description = "Wikibase queries and edits made easy"
license = "Apache-2.0 and GPL-3.0"
authors = ["Samuel Meuli <me@samuelmeuli.com>"]
readme = "README.md"
repository = "https://github.com/samuelmeuli/python-wikibase"
documentation = "https://github.com/samuelmeuli/python-wikibase/blob/master/docs/usage.md"
keywords = ["wikibase", "wikidata", "bot", "api", "wrapper"]
classifiers = [
	"Intended Audience :: Developers",
	"Topic :: Internet",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
wikibase-api = "^0.1.0"

[tool.poetry.dev-dependencies]
black = "^18.3-alpha.0"
flake8 = "^3.6"
isort = "^4.3"
pytest = "^3.0"

[tool.black]
line-length = 100

[tool.isort]
combine_as_imports = true
combine_star = true
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
